--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@strapi/plugin-cloud": "5.3.0",
+    "@strapi/plugin-i18n": "^4.25.13",
     "@strapi/plugin-users-permissions": "5.3.0",
     "@strapi/strapi": "5.3.0",
     "better-sqlite3": "11.3.0",
@@ -23,7 +24,6 @@
     "react-router-dom": "^6.0.0",
     "styled-components": "^6.0.0"
   },
-  "devDependencies": {},
   "engines": {
     "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
